--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -29,8 +30,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
-          <li><a class="nav-link scrollto" href="#about">Acerca de</a></li>
-          <li><a class="nav-link scrollto" href="#services">Planes</a></li>
+          <li><a class="nav-link scrollto" href="#services">Acerca de</a></li>
+          <li><a class="nav-link scrollto" href="">Planes</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -42,7 +43,7 @@
   <!--Hero-->
   <section id="hero">
     <div class="hero-container">
-      <h3>Haz realidad tus sueños con <strong>EzLabor</strong></h3>
+      <h3>Haz realidad tus sueños con <strong>EZLabor</strong></h3>
       <h1>Freelancer / Empleador</h1>
       <h2>La plataforma laboral que necesitabas está aquí</h2>
       <a href="#about" class="btn-get-started scrollto">Conoce más</a>
@@ -50,6 +51,113 @@
   </section>
   <main id="main">
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+   <!--About-->
+    <section id="services" class="services">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>About</h2>
+          <h3>¿Necesitas apoyo?</h3>
+          <p>Somos tu mejor aliado para lograr tus objetivos.</p>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <h4 class="title"><a href="">Solicita</a></h4>
+              <p class="description">Postea el trabajo que tienes que llevar a cabo y recibe propuestas competitivas de nuestros freelancers. ¡Así de simple!</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4 class="title"><a href="">Escoge</a></h4>
+              <p class="description">Lo que sea que necesites, siempre habrá un freelancer que lo hará con gusto, desde desarrollo web hasta diseño gráfico, desde trabajos de fotografía hasta grabación de escenas para un metraje (y muchas opciones más).</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <h4 class="title"><a href="">Paga seguro</a></h4>
+              <p class="description">Contamos con medios para que el pago al freelancer elegido sea lo más seguro posible. EZLabor te permite pagar por distintos medios: tarjeta de crédito, PayPal, transferencia, etcétera.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+     <!-- ======= Cta Section ======= -->
+    <section id="cta" class="cta  carousel slide text-center" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h3>Explora <stron><span>trabajos</span></h3>
+          <p> Explora múltiples solicitudes de trabajo que solicitan los empleadores. Elige el que más se adecúe a tu horario y que creas que pague mejor.</p>
+        </div>
+        <div class="carousel-item">
+          <h3>Encuentra <span>Freelancers</span></h3>
+          <p> Contamos con freelancers especializados en múltiples rubros. Sólo publica tu solicitud, recibe ofertas y decide cual se ajusta mejor.</p>
+        </div>
+      </div>
+    </section><!-- End Cta Section -->
+       <!--About-->
+       <section id="services" class="services">
+        <div class="container">
+  
+          <div class="section-title">
+            <h3>¿Por qué EZLabor?</h3>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-6 mt-4">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bx-file"></i></div>
+                <h4 class="title"><a href="">Explora portafolios</a></h4>
+                <p class="description">Encuentra al profesional al que le quieres confiar tu proyecto, explora los portafolios para poder encontrar al indicado</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-6 mt-4">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bx-file"></i></div>
+                <h4 class="title"><a href="">Mira ofertas</a></h4>
+                <p class="description">Recibe ofertas de nuestros freelancers en cuestión de segundos.<br> <br> <br></p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-6 mt-4 ">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bx-file"></i></div>
+                <h4 class="title"><a href="">Chat en vivo</a></h4>
+                <p class="description">Puedes abrir chat con tus freelancers para solicitarles actualizaciones en su progreso. <br> <br> </p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-6 mt-4">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bx-file"></i></div>
+                <h4 class="title"><a href="">Paga por calidad</a></h4>
+                <p class="description">Paga cuando estés 100% satisfecho con el trabajo entregado.</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-6 mt-4 ">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bx-file"></i></div>
+                <h4 class="title"><a href="">Fija plazos</a></h4>
+                <p class="description">Coloca un plazo para que el trabajo sea entregado, discutiéndolo con el freelancer para saber cuándo estará listo el proyecto.</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-6 mt-4">
+              <div class="icon-box">
+                <div class="icon"><i class="bx bx-file"></i></div>
+                <h4 class="title"><a href="">Soporte 24/7</a></h4>
+                <p class="description">Estamos para ayudar y hacer de tu experiencia en EZLabor de la más intuitiva. Tenemos un servicio de soporte con personas reales las 24 horas del día, los 7 días de la semana.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -60,6 +168,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
