feat: "add section pricing"

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
   <!--Header -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
-
       <h1 class="logo"><a href="index.html">EZLABOR</a></h1>
-
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
@@ -36,7 +34,6 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
     </div>
   </header>
 
@@ -158,6 +155,92 @@
         </div>
       </section>
 
+          <!-- ======= Pricing Section ======= -->
+    <section id="pricing" class="pricing  text-light">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Planes</h2>
+          <h3>Contamos con planes muy interesantes para ti <span>al mejor precio</span></h3>
+          <p>Elije el que mejor se adapte a tus requerimientos.</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-6 col-md-6">
+            <div class="box">
+              <h3>Freelancer <br><strong>Free</strong></h3>
+              <h4><sup>$</sup>0<span> / month</span></h4>
+              <ul>
+                <li>Accede a una vasta bolsa de trabajo</li>
+                <li>Postula a los proyectos que más te convenga</li>
+                <li>Recibe los pagos de tus trabajos a donde más te acomode</li>
+                <li class="na">Sin Anuncios</li>
+                <li class="na">Aparición TOP en las preferencias de empleadores</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Registrarme</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6">
+            <div class="box recommended">
+              <span class="recommended-badge">Recommended</span>
+              <h3>Freelancer <br><strong><span>Premium</span></strong></h3>
+              <h4><sup>$</sup>19<span> / month</span></h4>
+              <ul>
+                <li>Accede a una vasta bolsa de trabajo</li>
+                <li>Postula a los proyectos que más te convenga</li>
+                <li>Recibe los pagos de tus trabajos a donde más te acomode</li>
+                <li>Sin Anuncios</li>
+                <li>Aparición TOP en las preferencias de empleadores</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Adquirir</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 mt-4 mt-lg-6">
+            <div class="box">
+              <h3>Empleador<br><strong>Free</strong></h3>
+              <h4><sup>$</sup>29<span> / month</span></h4>
+              <ul>
+                <li>Accede a un amplio repertorio de freelancers</li>
+                <li>Chequea a detalle las ofertas que recibes</li>
+                <li>Sigue el progreso de tu proyecto en tiempo real</li>
+                <li class="na">Sin Anuncios</li>
+                <li class="na">Aparición TOP en ofertas laborales</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Registrarme</a>
+              </div>
+            </div>
+          </div>
+           
+            <div class="col-lg-6 col-md-6 mt-4 mt-lg-6">
+              <div class="box recommended">
+                <span class="recommended-badge">Recommended</span>
+                <h3>Empleador<br><strong><span>Premium</span></strong></h3>
+                <h4><sup>$</sup>19<span> / month</span></h4>
+                <ul>
+                  <li>Accede a un amplio repertorio de freelancers</li>
+                  <li>Chequea a detalle las ofertas que recibes</li>
+                  <li>Sigue el progreso de tu proyecto en tiempo real</li> 
+                  <li>Sin Anuncios</li>
+                  <li>Aparición TOP en ofertas laborales</li>
+                </ul>
+                <div class="btn-wrap">
+                  <a href="#" class="btn-buy">Adquirir</a>
+                </div>
+              </div>
+            </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Pricing Section -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
