feat: add team section and footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
           <li><a class="nav-link scrollto" href="#services">Acerca de</a></li>
-          <li><a class="nav-link scrollto" href="">Planes</a></li>
+          <li><a class="nav-link scrollto" href="#pricing">Planes</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -43,7 +43,7 @@
       <h3>Haz realidad tus sueños con <strong>EZLabor</strong></h3>
       <h1>Freelancer / Empleador</h1>
       <h2>La plataforma laboral que necesitabas está aquí</h2>
-      <a href="#about" class="btn-get-started scrollto">Conoce más</a>
+      <a href="#services" class="btn-get-started scrollto">Conoce más</a>
     </div>
   </section>
   <main id="main">
@@ -170,13 +170,13 @@
           <div class="col-lg-6 col-md-6">
             <div class="box">
               <h3>Freelancer <br><strong>Free</strong></h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h4><sup>$</sup>0<span> / mes</span></h4>
               <ul>
                 <li>Accede a una vasta bolsa de trabajo</li>
                 <li>Postula a los proyectos que más te convenga</li>
                 <li>Recibe los pagos de tus trabajos a donde más te acomode</li>
-                <li class="na">Sin Anuncios</li>
                 <li class="na">Aparición TOP en las preferencias de empleadores</li>
+                <li class="na">Sin Anuncios</li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Registrarme</a>
@@ -186,15 +186,15 @@
 
           <div class="col-lg-6 col-md-6">
             <div class="box recommended">
-              <span class="recommended-badge">Recommended</span>
+              <span class="recommended-badge">Recomendado</span>
               <h3>Freelancer <br><strong><span>Premium</span></strong></h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h4><sup>$</sup>5<span> / mes</span></h4>
               <ul>
                 <li>Accede a una vasta bolsa de trabajo</li>
                 <li>Postula a los proyectos que más te convenga</li>
                 <li>Recibe los pagos de tus trabajos a donde más te acomode</li>
-                <li>Sin Anuncios</li>
                 <li>Aparición TOP en las preferencias de empleadores</li>
+                <li>Sin Anuncios</li>                
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Adquirir</a>
@@ -205,13 +205,13 @@
           <div class="col-lg-6 col-md-6 mt-4 mt-lg-6">
             <div class="box">
               <h3>Empleador<br><strong>Free</strong></h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h4><sup>$</sup>0<span> / mes</span></h4>
               <ul>
                 <li>Accede a un amplio repertorio de freelancers</li>
                 <li>Chequea a detalle las ofertas que recibes</li>
                 <li>Sigue el progreso de tu proyecto en tiempo real</li>
-                <li class="na">Sin Anuncios</li>
                 <li class="na">Aparición TOP en ofertas laborales</li>
+                <li class="na">Sin Anuncios</li>              
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Registrarme</a>
@@ -221,15 +221,15 @@
            
             <div class="col-lg-6 col-md-6 mt-4 mt-lg-6">
               <div class="box recommended">
-                <span class="recommended-badge">Recommended</span>
+                <span class="recommended-badge">Recomendado</span>
                 <h3>Empleador<br><strong><span>Premium</span></strong></h3>
-                <h4><sup>$</sup>19<span> / month</span></h4>
+                <h4><sup>$</sup>5<span> / mes</span></h4>
                 <ul>
                   <li>Accede a un amplio repertorio de freelancers</li>
                   <li>Chequea a detalle las ofertas que recibes</li>
                   <li>Sigue el progreso de tu proyecto en tiempo real</li> 
-                  <li>Sin Anuncios</li>
                   <li>Aparición TOP en ofertas laborales</li>
+                  <li>Sin Anuncios</li>                  
                 </ul>
                 <div class="btn-wrap">
                   <a href="#" class="btn-buy">Adquirir</a>
@@ -242,6 +242,130 @@
       </div>
     </section><!-- End Pricing Section -->
 
+     <!-- ======= Team Section ======= -->
+     <section id="team" class="team">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Team</h2>
+          <h3>Nuestro gran <span>equipo</span></h3>
+          <p>Los dinámicos del Software</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Bryan Vela</h4>
+                <span>Developer</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Andree Liñan</h4>
+                <span>Developer</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Antony Carrasco</h4>
+                <span>Developer</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Gustavo Chavez</h4>
+                <span>Developer</span>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>John Mamani</h4>
+                <span>Developer</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Team Section -->
+
+    <div class="container d-md-flex py-4">
+      <div class="me-md-auto text-center text-md-start">
+        <div class="copyright">
+         <strong><span>EZLabor</span></strong>.  Un proyecto de <i>Los dinamicos del Software
+        </div>
+        <div class="credits">
+         Universidad Peruana de Ciencias Aplicadas - 2021
+        </div>
+      </div>
+      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -249,6 +373,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
+  <script src="js/main.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
